--- a/package.json
+++ b/package.json
@@ -3,13 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.9.0",
+    "bootstrap": "^5.3.6",
     "react": "^19.1.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
+    "react-github-calendar": "^4.5.7",
+    "react-icons": "^5.5.0",
+    "react-parallax-tilt": "^1.7.295",
+    "react-pdf": "^9.2.1",
+    "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.12.2",
+    "typewriter-effect": "^2.22.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
